<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilAreaOfWork"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/null_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16dp"
        android:hint="@string/filtration_work_area_hint"
        android:textColorHint="@color/stroke_filtration_text_colors"
        app:hintTextColor="@color/stroke_filtration_text_colors"
        app:endIconDrawable="@drawable/arrow_forward"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAreaOfWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background"
            android:focusable="false"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="text"
            android:maxLines="@dimen/fragment_filtration_max_lines_in_area_tv"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilIndustry"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/null_width"
        android:layout_height="wrap_content"
        android:hint="@string/filtration_industry_hint"
        android:textColorHint="@color/stroke_filtration_text_colors"
        app:endIconDrawable="@drawable/arrow_forward"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorSecondary"
        app:hintTextColor="@color/stroke_filtration_text_colors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilAreaOfWork">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etIndustry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background"
            android:focusable="false"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="text"
            android:maxLines="@dimen/fragment_filtration_max_lines_in_industry_tv"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilSalary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/null_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_24dp"
        android:background="@drawable/ic_edit_text_background_dark"
        android:cursorVisible="true"
        android:hint="@string/filtration_waiting_salary"
        android:imeOptions="actionDone"
        android:paddingTop="@dimen/size_8dp"
        android:singleLine="true"
        android:textColorHint="@color/filtration_salary_hint_colors_selector"
        android:textCursorDrawable="@drawable/search_et_cursor"
        app:boxStrokeWidth="@dimen/null_width"
        app:boxStrokeWidthFocused="@dimen/null_width"
        app:endIconDrawable="@drawable/clean_icon"
        app:endIconMode="clear_text"
        app:endIconTint="@color/blackUniversal"
        app:expandedHintEnabled="false"
        app:hintTextColor="@color/filtration_salary_hint_colors_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilIndustry"
        app:placeholderText="@string/filtration_salary_placeholder"
        app:placeholderTextColor="@color/whiteUniversal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:maxLines="@dimen/fragment_filtration_max_lines_in_salaty_et"
            android:textColor="@color/blackUniversal"
            android:textSize="@dimen/text_16" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/size_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilSalary">

        <TextView
            android:id="@+id/tvCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/size_20dp"
            android:layout_marginStart="@dimen/size_16dp"
            android:text="@string/filtration_not_show_without_salary" />

        <CheckBox
            android:id="@+id/checkBoxSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/blue"
            android:layout_gravity="end|center" />
    </FrameLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="@dimen/null_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_8dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/ys_display_medium"
        android:paddingVertical="@dimen/size_20dp"
        android:text="@string/filtration_save_button"
        android:textAllCaps="false"
        android:textColor="@color/whiteUniversal"
        android:textSize="@dimen/text_16"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonRemove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="@dimen/null_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_24dp"
        android:backgroundTint="?attr/background"
        android:fontFamily="@font/ys_display_medium"
        android:paddingVertical="@dimen/size_20dp"
        android:text="@string/filtration_remove_button"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="@dimen/text_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
