<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etRegionSearch"
        style="@style/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_region_search_field_height"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginVertical="@dimen/size_8dp"
        android:cursorVisible="true"
        android:hint="@string/region_hint"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textCursorDrawable="@drawable/search_et_cursor"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,MissingConstraints" />

    <ImageView
        android:id="@+id/ivClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/size_28dp"
        android:contentDescription="@string/industry_it_test"
        android:src="@drawable/search_icon"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/etRegionSearch"
        app:layout_constraintEnd_toEndOf="@id/etRegionSearch"
        app:layout_constraintTop_toTopOf="@+id/etRegionSearch" />

    <ImageView
        android:id="@+id/ivClean"
        android:layout_width="@dimen/fragment_region_clean_button_dimensions"
        android:layout_height="@dimen/fragment_region_clean_button_dimensions"
        android:layout_marginEnd="@dimen/size_16dp"
        android:src="@drawable/clean_icon_black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/etRegionSearch"
        app:layout_constraintTop_toTopOf="@id/etRegionSearch"
        app:layout_constraintBottom_toBottomOf="@id/etRegionSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/null_height"
        android:layout_marginTop="@dimen/size_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegionSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/region_view"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_bar_dimensions"
        android:layout_height="@dimen/progress_bar_dimensions"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nothing_found_cat"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRegionSearch" />

    <TextView
        android:id="@+id/tvPlaceholder"
        style="@style/placeholder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPlaceholder"
        tools:text="@string/search_vacancy_list_not_found"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
